https_ingress_letzencrypt.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.sample.com
    secretName: app-secret
  rules:
    - host: app.sample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo1
                port:
                  number: 80
          # - path: /sample
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: sample
          #       port:
          #         number: 8080
